--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,25 @@
 absl-py==2.3.1
-annotated-types==0.7.0
-astunparse==1.6.3
-audioread==3.0.1
-blinker==1.9.0
-cachetools==5.5.2
-certifi==2025.8.3
-cffi==2.0.0
-charset-normalizer==3.4.3
-click==8.1.8
-colorama==0.4.6
-contourpy==1.3.0
-cycler==0.12.1
-decorator==5.2.1
-Flask==3.1.2
-Flask-Login==0.6.3
-Flask-SQLAlchemy==3.1.1
+
+bcrypt==5.0.0
+
+Flask==3.1.1
 flatbuffers==25.2.10
-fonttools==4.59.2
+fonttools==4.58.1
 fpdf==1.7.2
-gast==0.4.0
+gast==0.6.0
 google-ai-generativelanguage==0.6.15
-google-api-core==2.25.2
-google-api-python-client==2.184.0
-google-auth==2.40.3
+google-api-core==2.27.0
+google-api-python-client==2.185.0
+google-auth==2.41.1
 google-auth-httplib2==0.2.0
 google-generativeai==0.8.5
 google-pasta==0.2.0
-googleapis-common-protos==1.70.0
-greenlet==3.2.4
-grpcio==1.74.0
-grpcio-status==1.71.2
-gTTS==2.5.4
-h5py==3.14.0
-httplib2==0.31.0
-idna==3.10
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-itsdangerous==2.2.0
-Jinja2==3.1.6
-joblib==1.5.2
-keras==3.10.0
-kiwisolver==1.4.7
-lazy_loader==0.4
-libclang==18.1.1
-librosa==0.10.1
-mdurl==0.1.2
-ml_dtypes==0.5.3
-msgpack==1.1.1
-mysql-connector-python==9.4.0
-pandas==2.1.1
-numpy==1.26.4
+googleapis-common-protos==1.71.0
+
+mysql-connector-python==9.3.0
+numpy==2.1.3
+
+pandas==2.2.3
+
+
+scikit-learn==1.6.1
